--- a/index.html
+++ b/index.html
@@ -5,34 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/global.css"/>
-    <link rel="stylesheet" href="./fonts/fonts.css"/>
-    <link rel="stylesheet" href="./styles/style.css"/>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-        <li class=
-          "header__links-list-item
-          header__link_active
-          header__links-list-item_no-bullit
-          ">
-          <a class="header__link" href="#0">главная</a>
-        </li>
-        <li class="header__links-list-item">
-          <a class="header__link" href="#0">посмотреть лоты</a>
-        </li>
-        <li class="header__links-list-item">
-          <a class="header__link" href="#0">об аукционе</a>
-        </li>
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#0">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
         </ul>
       </nav>
       <a class="header__logo">
         <img
-        class="header__logo-image"
-        src="./images/logo-black.svg"
-        alt="Логотип проекта"
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип проекта"
         />
       </a>
       <address class="address">
@@ -44,7 +40,10 @@
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
           <li>
-            <p>наб. Принсенграхт 263-<br> 265, Амстердам</p>
+            <p>
+              наб. Принсенграхт 263-<br />
+              265, Амстердам
+            </p>
           </li>
         </ul>
       </address>
@@ -53,94 +52,111 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <p class="aligned-text">он
-            <span class="letter-spacing-extended">о</span>
-          </p>
-          <p class="aligned-text_center">теб
-            <span class="letter-spacing-extended">е</span>
-          </p>
-          <p class="aligned-text_right"> 
-            <span class="letter-spacing-extended">н</span>
-            ад
-            <span class="no-letter-spacing">о</span>
+          <p class="aligned-text">о<span class="letter-spacing-extended">но</span></p>
+          <p class="aligned-text aligned-text_center">те</span><span class="letter-spacing-extended">бе</span></p>
+          <p class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
           </p>
         </h1>
         <div class="cover__description">
-          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
-        <ul class="lots__card-list">
+        <div class="lots__card-list">
           <!--Карточка 1-->
-          <article class="lots__card-list-item card_type_film">
-            <div class="card">
-              <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
-              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка,
-              если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
-            </div>
-          </article>
+          <a class="card-link" href="#0">
+            <article class="lots__card-list-item card_type_film">
+              <div class="overlay"></div>
+              <div class="card">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </div>
+            </article>
+          </a>
           <!--Карточка 2-->
-          <article class="lots__card-list-item card_type_book ">
-          <div class="card">
-              <h3 class="card__title">
-                Книга, где описан один скучный день
-                из жизни рекламного агента
-              </h3>
-            <div class="card__text">
-              <p>
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и
-                с переходами на древнеанглийский. В ней одновременно рассказывается
-                о 16 июня 1904 года и об истории литературы, начиная с античных времён.
-                И это всё накладывается на эпическую поэму Гомера.
-                Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-              </p>
-          </div>
-          </article>
+          <a class="card-link" href="#0">
+            <article class="lots__card-list-item card_type_book">
+              <div class="overlay"></div>
+              <div class="card">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <div class="card__text">
+                  <p>
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                </div>
+              </div>
+            </article>
+          </a>
           <!--Карточка 3-->
-          <article class="lots__card-list-item card_type_picture">
-            <div class="card">
-              <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
-              <p class="card__text">
-                Ну действительно, там линия, тут кружочек, а здесь и
-                вовсе что-то похожее на инфузорию-туфельку. Никаких полей,
-                лесов, котиков... Сколько бы вы на такое поставили,
-                если бы не знали, что это — одна из революционных работ
-                Кандинского?
-              </p>
-          </div>
-          </article>
-        </ul>
-        <div>
-          <a class="lots_look-more-link" href="#0">посмотреть больше</a>
+          <a class="card-link" href="#0">
+            <article class="lots__card-list-item card_type_picture">
+              <div class="overlay"></div>
+              <div class="card">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </div>
+            </article>
+          </a>
         </div>
+        <a class="lots_look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
-        <ul class="about__column">
-          <li>
-            <div class="about__logo">
-              <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип проекта">
-            </div>
-          </li>
-          <li class="about__card">
+        <div class="about__column">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="./images/logo-white.svg"
+              alt="Логотип проекта"
+            />
+          </div>
+          <div class="about__card">
             <h4 class="about__title">Об аукционе</h4>
-            <p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-              Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник
-              девочки-подростка или картина, которую может нарисовать даже ребёнок?
-              Кому нужны все эти странные вещи, созданные любителями?</p>
-              <p class="about__text no__margin__bottom">Слишком сложные или, наоборот, слишком простые.
-              Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-              Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.
-              Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+            <p class="about__text">
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
             </p>
-          </li>
-        </ul>
+            <p class="about__text no__margin__bottom">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
+        </div>
       </section>
       <footer class="footer">
-        <address class="address footer__address">
-          <ul class=>
+        <address class="address">
+          <ul class="footer__address">
             <li>
               <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
             </li>
@@ -148,39 +164,48 @@
               <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
             </li>
             <li>
-              <p>наб. Принсенграхт 263-<br> 265, Амстердам</p>
+              <p>
+                наб. Принсенграхт 263-<br />
+                265, Амстердам
+              </p>
             </li>
           </ul>
         </address>
         <nav class="footer__menu">
           <ul class="footer__links-list">
-          <li class=
-            "footer__links-list-item
-            footer__link_active">
-            <a class="footer__link" href="#0">главная</a>
-          </li>
-          <li class="footer__links-list-item">
-            <a class="footer__link" href="#0">посмотреть лоты</a>
-          </li>
-          <li class="footer__links-list-item">
-            <a class="footer__link" href="#0">об аукционе</a>
-          </li>
+            <li class="footer__links-list-item">
+              <a class="footer__link footer__link_active" href="#0">главная</a>
+            </li>
+            <li class="footer__links-list-item">
+              <a class="footer__link" href="#0">посмотреть лоты</a>
+            </li>
+            <li class="footer__links-list-item">
+              <a class="footer__link" href="#0">об аукционе</a>
+            </li>
           </ul>
         </nav>
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/yt.svg" alt="Ютуб">
+              <img
+                class="footer__social-icon"
+                src="./images/yt.svg"
+                alt="Ютуб"
+              />
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/vk.svg" alt="ВК">
+              <img class="footer__social-icon" src="./images/vk.svg" alt="ВК" />
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/pinterest.svg" alt="Принтерест">
+              <img
+                class="footer__social-icon"
+                src="./images/pinterest.svg"
+                alt="Принтерест"
+              />
             </a>
           </li>
         </ul>
