--- a/index.html
+++ b/index.html
@@ -52,9 +52,17 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <p class="aligned-text">о<span class="letter-spacing-extended">но</span></p>
-          <p class="aligned-text aligned-text_center">те</span><span class="letter-spacing-extended">бе</span></p>
-          <p class="aligned-text aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+          <p class="aligned-text">
+            о<span class="letter-spacing-extended">но</span>
+          </p>
+          <p class="aligned-text aligned-text_center">
+            те<span class="letter-spacing-extended">бе</span>
+          </p>
+          <p class="aligned-text aligned-text_right">
+            <span class="letter-spacing-extended">н</span>ад<span
+              class="no-letter-spacing"
+              >о</span
+            >
           </p>
         </h1>
         <div class="cover__description">
