--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
@@ -34,16 +34,14 @@
       <address class="address">
         <ul class="header__address">
           <li>
-            <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+            <a href="tel:+99995555555">+9 999 555 5555</a>
           </li>
           <li>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
           <li>
-            <p>
-              наб. Принсенграхт 263-<br />
-              265, Амстердам
-            </p>
+            наб. Принсенграхт 263-<br />
+            265, Амстердам
           </li>
         </ul>
       </address>
@@ -52,18 +50,18 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <p class="aligned-text">
+          <span class="aligned-text">
             о<span class="letter-spacing-extended">но</span>
-          </p>
-          <p class="aligned-text aligned-text_center">
+          </span>
+          <span class="aligned-text aligned-text_center">
             те<span class="letter-spacing-extended">бе</span>
-          </p>
-          <p class="aligned-text aligned-text_right">
+          </span>
+          <span class="aligned-text aligned-text_right">
             <span class="letter-spacing-extended">н</span>ад<span
               class="no-letter-spacing"
               >о</span
             >
-          </p>
+          </span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -74,12 +72,11 @@
       </section>
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
-        <div class="lots__card-list">
-          <!--Карточка 1-->
-          <a class="card-link" href="#0">
-            <article class="lots__card-list-item card_type_film">
-              <div class="overlay"></div>
-              <div class="card">
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
@@ -88,35 +85,33 @@
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
                 </p>
-              </div>
-            </article>
-          </a>
+              </article>
+            </a>
+          </li>
           <!--Карточка 2-->
-          <a class="card-link" href="#0">
-            <article class="lots__card-list-item card_type_book">
-              <div class="overlay"></div>
-              <div class="card">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
-                <div class="card__text">
-                  <p>
-                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
-                    и с переходами на древнеанглийский. В ней одновременно
-                    рассказывается о 16 июня 1904 года и об истории литературы,
-                    начиная с античных времён. И это всё накладывается на
-                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
-                    Джеймса Джойса?
-                  </p>
-                </div>
-              </div>
-            </article>
-          </a>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
           <!--Карточка 3-->
-          <a class="card-link" href="#0">
-            <article class="lots__card-list-item card_type_picture">
-              <div class="overlay"></div>
-              <div class="card">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
@@ -126,10 +121,10 @@
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
-              </div>
-            </article>
-          </a>
-        </div>
+              </article>
+            </a>
+          </li>
+        </ul>
         <a class="lots_look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
@@ -141,41 +136,41 @@
               alt="Логотип проекта"
             />
           </div>
-          <div class="about__card">
-            <h4 class="about__title">Об аукционе</h4>
-            <p class="about__text">
-              Здесь вы не встретите очередное пафосное собрание невероятно
-              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
-              на один аукцион. Потому что кому нужен дневник девочки-подростка
-              или картина, которую может нарисовать даже ребёнок? Кому нужны все
-              эти странные вещи, созданные любителями?
-            </p>
-            <p class="about__text no__margin__bottom">
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё
-              время. В пух и прах растерзанные критиками. Непринятые и
-              непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих
-              лотов невозможно представить современную культуру. Когда в эти
-              вещи не верил никто, продолжали верить их создатели. И сейчас эти
-              лоты стали культовыми.
-            </p>
-          </div>
+          <article class="about__card">
+            <h2 class="about__title">Об аукционе</h2>
+            <div class="about__text">
+              <p>
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка или картина, которую может нарисовать даже
+                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p>
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты стали культовыми.
+              </p>
+            </div>
+          </article>
         </div>
       </section>
       <footer class="footer">
         <address class="address">
           <ul class="footer__address">
             <li>
-              <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+              <a href="tel:+99995555555">+9 999 555 5555</a>
             </li>
             <li>
               <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
             </li>
             <li>
-              <p>
-                наб. Принсенграхт 263-<br />
-                265, Амстердам
-              </p>
+              наб. Принсенграхт 263-<br />
+              265, Амстердам
             </li>
           </ul>
         </address>
