--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           alt="Логотип проекта"
         />
       </a>
-      <address class="address">
-        <ul class="header__address">
+      <address class="address header__address">
+        <ul class="address-list">
           <li>
             <a href="tel:+99995555555">+9 999 555 5555</a>
           </li>
@@ -159,60 +159,56 @@
           </article>
         </div>
       </section>
-      <footer class="footer">
-        <address class="address">
-          <ul class="footer__address">
-            <li>
-              <a href="tel:+99995555555">+9 999 555 5555</a>
-            </li>
-            <li>
-              <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-            </li>
-            <li>
-              наб. Принсенграхт 263-<br />
-              265, Амстердам
-            </li>
-          </ul>
-        </address>
-        <nav class="footer__menu">
-          <ul class="footer__links-list">
-            <li class="footer__links-list-item">
-              <a class="footer__link footer__link_active" href="#0">главная</a>
-            </li>
-            <li class="footer__links-list-item">
-              <a class="footer__link" href="#0">посмотреть лоты</a>
-            </li>
-            <li class="footer__links-list-item">
-              <a class="footer__link" href="#0">об аукционе</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="footer__social-list">
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img
-                class="footer__social-icon"
-                src="./images/yt.svg"
-                alt="Ютуб"
-              />
-            </a>
+    </main>
+    <footer class="footer">
+      <address class="address footer__address">
+        <ul class="address-list">
+          <li>
+            <a href="tel:+99995555555">+9 999 555 5555</a>
           </li>
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img class="footer__social-icon" src="./images/vk.svg" alt="ВК" />
-            </a>
+          <li>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           </li>
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img
-                class="footer__social-icon"
-                src="./images/pinterest.svg"
-                alt="Принтерест"
-              />
-            </a>
+          <li>
+            наб. Принсенграхт 263-<br />
+            265, Амстердам
           </li>
         </ul>
-      </footer>
-    </main>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__links-list">
+          <li class="footer__links-list-item">
+            <a class="footer__link footer__link_active" href="#0">главная</a>
+          </li>
+          <li class="footer__links-list-item">
+            <a class="footer__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__links-list-item">
+            <a class="footer__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="Ютуб" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="ВК" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="Принтерест"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
